<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/share"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:textAlignment="center"
        android:text="@string/share"
        android:textColor="@color/text_color"
        android:background="@drawable/background_color"
        android:textSize="@dimen/font_medium_sm" />
    <TextView
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:textAlignment="center"
        android:text="@string/email"
        android:textColor="@color/text_color"
        android:background="@drawable/background_color"
        android:textSize="@dimen/font_medium_sm" />
    <TextView
        android:id="@+id/in_app_message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:textAlignment="center"
        android:text="@string/in_app_message"
        android:textColor="@color/text_color"
        android:background="@drawable/background_color"
        android:textSize="@dimen/font_medium_sm" />
    <TextView
        android:id="@+id/sms"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:textAlignment="center"
        android:text="@string/sms"
        android:textColor="@color/text_color"
        android:background="@drawable/background_color"
        android:textSize="@dimen/font_medium_sm" />
    <TextView
        android:id="@+id/fb_msg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:textAlignment="center"
        android:text="@string/facebook_message"
        android:textColor="@color/text_color"
        android:background="@drawable/background_color"
        android:textSize="@dimen/font_medium_sm" />
</LinearLayout>